syntax = "proto3";

package netsvr.topicSubscribe;

option go_package = "pkg/protocol;protocol";

//business向worker请求，进行订阅操作
message TopicSubscribe {
  //目标uniqId
  string uniqId = 1;
  //需要订阅的主题
  repeated string topics = 2;
  //订阅主题后，需要发给客户的数据，如果没有，可以不传
  bytes data = 3;
}